banner: fix wrong padding

--- a/_sass/layout/_banner.scss
+++ b/_sass/layout/_banner.scss
@@ -19,8 +19,6 @@
   cursor: default;
   height: 60vh;
   margin-bottom: -3.25em;
-  margin-left: -3.25em;
-  margin-right: -3.25em;
   max-height: 32em;
   min-height: 22em;
   position: relative;
